--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
-<html>
-<head>
+<html><head>
 <title>Stacker</title>
+    <style>
+        body {
+         background-color:black;
+            color:white;
+            font-family:Helvetica,Arial;
+        }
+        .mast {
+         	font-size:48pt;
+            margin-left:300px;
+            margin-top:300px;
+            color:white;
+        }
+        </style>
 </head>
 <body>
-Stacker.
-</body>
-</html>
+<div class="mast">Stacker.</div>
+</body></html>
